[tool.poetry]
name = "peepop"
version = "0.1.0"
description = "Create automated cryptocurrency bots that trade for you while you sleep"
authors = ["Rohit Agrawal <rohitagrawalofficialmail@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = ""
repository = "https://github.com/hackersandslackers/python-poetry-tutorial/"
documentation = "https://hackersandslackers.com/python-poetry/"
keywords = [
    "Stocks",
    "Cryptocurrencies",
    "Algorithmic Trading",
    "Backtesting",
    "Trading bots"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry"
]
include = ["CHANGELOG.md"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.7.1"
python_binance = "1.0.10"
bokeh = "2.3.2"
TA_Lib = "0.4.20"
pandas = "1.2.4"
numpy = "1.20.2"
binance = "0.3"
Requests = "2.25.1"
tqdm = "4.61.1"
websocket_client = "1.1.0"

[tool.poetry.dev-dependencies]
coverage = "5.3"
flake8 = "*"
# [tool.poetry.scripts]
# test = "python -m unittest discover"
# coverage = "coverage run --source=peepop -m unittest discover && coverage report -m && coverage xml"
